<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="at.sw2017.q_up.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_weight="0.04" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/regpassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/loginNavigationButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/loginbutton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintLeft_toRightOf="@+id/registerButton"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>