<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.q_up.ProfileActivity">


    <TextView
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="@string/username"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textViewMyProfile"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="@string/myprofile"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/buttonMap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="right|center_vertical"
        android:drawableBottom="@drawable/button_arrow"
        android:text="Map"
        android:textAllCaps="false"
        android:layout_marginTop="187dp"
        android:layout_marginRight="-8dp" />


</android.support.constraint.ConstraintLayout>
